dataset1235/2025-2/1153765216/users/1452895412/executions/2814675586_2296111720.log
== SUBMISSION (2025-08-26 18:28:29)
-- CODE: 
base = float(input(print("Digite a base: ")))
altura = float(input(print("Digite a altura: ")))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
None36.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
None6000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
None360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
None6.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
None1000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
None83.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:27:00)
-- CODE: 
base = input(print("Digite a base: "))
altura = input(print("Digite a altura: "))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:27:20)
-- CODE: 
base = int(input(print("Digite a base: "))
altura = int(input(print("Digite a altura: "))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = int(input(print("Digite a base: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = int(input(print("Digite a base: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = int(input(print("Digite a base: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = int(input(print("Digite a base: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = int(input(print("Digite a base: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = int(input(print("Digite a base: "))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:27:27)
-- CODE: 
base = int(input(print("Digite a base: ")))
altura = int(input(print("Digite a altura: ")))
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '4.5'
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '50.0'
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.0'
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2.0'
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.0'
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '6.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:26:04)
-- CODE: 
base = float(input(print("Digite a base: "))
altura = float(input(print("Digite a altura: ")))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:27:26)
-- CODE: 
base = int(input(print("Digite a base: ")))
altura = int(input(print("Digite a altura: ")))
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '4.5'
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '50.0'
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.0'
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '2.0'
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '25.0'
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    base = int(input(print("Digite a base: ")))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '6.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:18:30)
-- CODE: 
base = float(input()
altura = float(input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:26:59)
-- CODE: 
base = input(print("Digite a base: "))
altura = input(print("Digite a altura: "))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura
           ~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'str'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:26:06)
-- CODE: 
base = float(input(print("Digite a base: "))
altura = float(input(print("Digite a altura: ")))
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input(print("Digite a base: "))
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
